[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes_folder/template/projectile_template.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets_folder/item/special_projectile_list.png" type="Texture" id=2]
[ext_resource path="res://scripts_folder/ship/bubble.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.5, 6.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 130.062

[node name="Bubble" instance=ExtResource( 1 )]
script = ExtResource( 3 )
speed = 8
damage = 10

[node name="ProjectileTexture" parent="." index="0"]
texture = ExtResource( 2 )
hframes = 3
frame = 2

[node name="ProjectileCollision" parent="." index="1"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 1 )

[node name="ProjectileNotifier" parent="." index="2"]
position = Vector2( 0.5, 0.5 )
scale = Vector2( 0.65, 0.65 )

[node name="DetectionArea" type="Area2D" parent="." index="3"]
collision_layer = 0
collision_mask = 4

[node name="Collision" type="CollisionShape2D" parent="DetectionArea" index="0"]
shape = SubResource( 2 )

[connection signal="area_entered" from="DetectionArea" to="." method="on_area_entered"]
[connection signal="area_exited" from="DetectionArea" to="." method="on_area_exited"]
